# FlightLink

./: .gitignore  CMakeLists.txt  Doxyfile  launch_clients.sh  launch_script_single_run.sh
Client/: CMakeLists.txt  main  main.cpp
Client/Telemetry Data/: Telem_2023_3_12 14_56_40.txt  Telem_2023_3_12 16_26_4.txt  Telem_czba-cykf-pa28-w2_2023_3_1 12_31_27.txt  katl-kefd-B737-700.txt
FlightLinkServer/: FlightLinkServer.sln
FlightLinkServer/FlightLinkServer/: FlightLinkServer.vcxproj  FlightLinkServer.vcxproj.filters  bounded_queue.h  connection_manager.cpp  connection_manager.h  flight_session_manager.cpp  flight_session_manager.h  main.cpp  protocol.h  sqlite3.h  stream_processor.cpp
Server/: CMakeLists.txt  main.cpp
Server/headers/: bounded_queue.h  connection_manager.h  protocol.h  stream_processor.h
Server/source/: connection_manager.cpp  stream_processor.cpp
report/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Client_2main_8cpp.html  Client_2main_8cpp.js  Client_2main_8cpp__incl.map  Client_2main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  Client_2main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  Client_2main_8cpp_a136b918707da99da8edaae4e7984f9de_icgraph.map  Client_2main_8cpp_a136b918707da99da8edaae4e7984f9de_icgraph.md5  Client_2main_8cpp_a18b398ac5b99c55eb07cae2d363b7afb_icgraph.map  Client_2main_8cpp_a18b398ac5b99c55eb07cae2d363b7afb_icgraph.md5  Client_2main_8cpp_a557e7b745780ccc3a128feee2b8a76a3_cgraph.map  Client_2main_8cpp_source.html  (+7891 more)
(+3894 files in other folders)
